--- a/My hello/My Hello.html
+++ b/My hello/My Hello.html
@@ -11,7 +11,7 @@
             <h3>I'm a person who likes programing. A lot. <sub>maybe even too much...</sub><br> But, that doesn't matter now, does it?</h3>
         </aside>
         <section>
-            <h4>Links: <a>Home</a> <a>Intrests</a></h4>
+            <h4>Links: <a>Home</a> <a>Intrests</a> <a>Projects</a> <a>Socials</a> <a>About me</a></h4>
 
         </section>
     </body>
